--- a/config.env
+++ b/config.env
@@ -1,32 +1,25 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-
-# RECOMMNED SETUP 
-## Setup only Required Config & DATABASE_URL
-## Rest of variable can be setup using BOT by /bsetting command
-
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-OWNER_ID = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
+BOT_TOKEN = "5789953346:AAEj-gd5j63e0x63iNCUvHaYRe9NKUxOfOw"
+OWNER_ID = "5873232899"
+TELEGRAM_API = "20512581"
+TELEGRAM_HASH = "86e23f5f868190ca18c2a542247e51e6"
 
 # OPTIONAL CONFIG
-GDRIVE_ID = ""
+GDRIVE_ID = "0AP9ZgD9dL6jLUk9PVA"
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 STATUS_UPDATE_INTERVAL = "20"                       
 AUTO_DELETE_MESSAGE_DURATION = "60"       
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = "-1" 
 DATABASE_URL = ""
-AUTHORIZED_CHATS = ""
+AUTHORIZED_CHATS = "-1001897884587 -1001934842043 -1001894446794 -1001645933125 -1001785535201 -1001680031747 -1001966476072"
 SUDO_USERS = ""
 IGNORE_PENDING_REQUESTS = ""
-IS_TEAM_DRIVE = ""
-USE_SERVICE_ACCOUNTS = ""
+IS_TEAM_DRIVE = "True"
+USE_SERVICE_ACCOUNTS = "True"
 SA_MAIL = ""                                          # SA Email id To display in USER TD Section
-INDEX_URL = ""                                        # Not end with /
-STATUS_LIMIT = "2"                                    # Recommended Value : 2 (If Using PICS)
-STOP_DUPLICATE = ""
+INDEX_URL = "https://ynmoviechannel.ynmovie.workers.dev"                                        # Not end with /
+STATUS_LIMIT = "5"                                    # Recommended Value : 2 (If Using PICS)
+STOP_DUPLICATE = "True"
 CMD_SUFFIX = ""
 UPTOBOX_TOKEN = ""
 TORRENT_TIMEOUT = ""
@@ -35,15 +28,15 @@ INCOMPLETE_TASK_NOTIFIER = ""
 TGH_THUMB = ""                                        # Give Telegraph URL(graph.org) for Logs/File Thumbnail
 
 # TURN ON/OFF FUCTIONS
-LEECH_ENABLED = ""                                    # Default is False (only use by owner/sudo) Make it True (for authorized chats)
-MIRROR_ENABLED = ""                                   # Default is False (only use by owner/sudo) Make it True (for authorized chats)
+LEECH_ENABLED = "True"                                    # Default is False (only use by owner/sudo) Make it True (for authorized chats)
+MIRROR_ENABLED = "True"                                   # Default is False (only use by owner/sudo) Make it True (for authorized chats)
 QB_MIRROR_ENABLED = ""                                # Default is False (only use by owner/sudo) Make it True (for authorized chats)
-WATCH_ENABLED = ""                                    # Default is False (only use by owner/sudo) Make it True (for authorized chats)
-CLONE_ENABLED = ""                                    # Default is False (only use by owner/sudo) Make it True (for authorized chats)
+WATCH_ENABLED = "True"                                    # Default is False (only use by owner/sudo) Make it True (for authorized chats)
+CLONE_ENABLED = "True"                                    # Default is False (only use by owner/sudo) Make it True (for authorized chats)
 ANILIST_ENABLED = ""                                  # Default is False (only use by owner/sudo) Make it True (for authorized chats)
 WAYBACK_ENABLED = ""                                  # Default is False (only use by owner/sudo) Make it True (for authorized chats)
 MEDIAINFO_ENABLED = ""                                # Default is False (only use by owner/sudo) Make it True (for authorized chats)
-SET_BOT_COMMANDS = "" 
+SET_BOT_COMMANDS = "True" 
 
 # UPDATE
 UPSTREAM_REPO = ""
@@ -71,7 +64,7 @@ LINK_LOGS = ""                                        # Must be Started with -10
 
 # OTHERS UTILS
 TG_SPLIT_SIZE = ""                                    # Each User can set its own using usetting
-EQUAL_SPLITS = ""                                     # Each User can Enable/Disable using usetting
+EQUAL_SPLITS = "True"                                     # Each User can Enable/Disable using usetting
 AS_DOCUMENT = ""                                      # Each User can Change Document/Media using usetting
 PAID_SERVICE = ""                                     # Default is False
 TIMEZONE = "Asia/Kolkata"                             # Checkout for Different timezone list https://bit.ly/2JtQfVI
@@ -103,8 +96,8 @@ RSS_CHAT_ID = ""                                      # Chat ID (Started with -1
 USER_SESSION_STRING = ""                              # Use it for 4GB leeching
 
 # MEGA
-MEGA_API_KEY = ""
-MEGA_EMAIL_ID = ""
+MEGA_API_KEY = "U9IwSDaK"
+MEGA_EMAIL_ID = "charchinster@gmail.com"
 MEGA_PASSWORD = ""
 
 # SHORTENER 
@@ -139,9 +132,9 @@ DAILY_LEECH_LIMIT = ""                                # Max size upto which user
 TIME_GAP = "-1"                                       # Restrict User for accepting the consecutive link at a time (int value in seconds, -1 means no restriction) 
 
 # PROGRESS SYMBOLS
-FINISHED_PROGRESS_STR = '■'                           # Get Any from https://coolsymbol.com
-UN_FINISHED_PROGRESS_STR = '□'                        # Get Any from https://coolsymbol.com
-MULTI_WORKING_PROGRESS_STR = '□ □ □ □ □ □ □'         # Must have 7 Different Symbols for Dynamic Progress Bar
+FINISHED_PROGRESS_STR = '█'                           # Get Any from https://coolsymbol.com
+UN_FINISHED_PROGRESS_STR = '▒'                        # Get Any from https://coolsymbol.com
+MULTI_WORKING_PROGRESS_STR = '▁ ▂ ▃ ▄ ▅ ▆ ▇'         # Must have 7 Different Symbols for Dynamic Progress Bar
 
 # THEME
 EMOJI_THEME = ""                                      #Default is False
