--- a/config.env
+++ b/config.env
@@ -39,9 +39,9 @@ MEDIAINFO_ENABLED = ""                                # Default is False (only u
 SET_BOT_COMMANDS = "True" 
 
 # UPDATE
-UPSTREAM_REPO = ""
-UPSTREAM_BRANCH = ""
-UPDATE_PACKAGES = "False"
+UPSTREAM_REPO = "https://github.com/weebzone/WZML"
+UPSTREAM_BRANCH = "master"
+UPDATE_PACKAGES = "True"
 
 # GROUP SECURITY
 SAFE_MODE = ""                                        # If this true file name will hide from status message and BOT_PM, FORCE_BOT_PM will enable automatically. Default is False.
